Final code used

--- a/train_and_stats.ipynb
+++ b/train_and_stats.ipynb
@@ -17,67 +17,15 @@
       "\n",
       "Data loaded\n",
       "\n",
-      "Epoch :  0 Test loss recursive :  -1.49920095205307y usage : 6614 MB, loaded 900    \n",
-      "Epoch :  1 Test loss recursive :  -1.5455427193641662usage : 6627 MB, loaded 900    \n",
-      "Epoch :  2 Test loss recursive :  -1.5722382640838624usage : 6628 MB, loaded 900    \n",
-      "Epoch :  3 Test loss recursive :  -1.5729693841934205usage : 6629 MB, loaded 900    \n",
-      "Epoch :  4 Test loss recursive :  -1.5723575806617738usage : 6633 MB, loaded 900    \n",
-      "Epoch :  5 Test loss recursive :  -1.5676700115203857usage : 6634 MB, loaded 900    \n",
-      "Epoch :  6 Test loss recursive :  -1.5731121516227722usage : 6636 MB, loaded 900    \n",
-      "Epoch :  7 Test loss recursive :  -1.5737843799591065usage : 6637 MB, loaded 900    \n",
-      "Epoch :  8 Test loss recursive :  -1.569270956516266 usage : 6638 MB, loaded 900    \n",
-      "Epoch :  9 Test loss recursive :  -1.5737464785575868usage : 6642 MB, loaded 900    \n",
-      "Epoch :  10 Test loss recursive :  -1.5734447240829468sage : 6646 MB, loaded 900    \n",
-      "Epoch :  11 Test loss recursive :  -1.572179651260376usage : 6653 MB, loaded 900    \n",
-      "Epoch :  12 Test loss recursive :  -1.5715507864952087sage : 6658 MB, loaded 900    \n",
-      "Epoch :  13 Test loss recursive :  -1.5732648849487305sage : 6663 MB, loaded 900    \n",
-      "Epoch :  14 Test loss recursive :  -1.5730287432670593sage : 6667 MB, loaded 900    \n",
-      "Epoch :  15 Test loss recursive :  -1.5737705326080322sage : 6672 MB, loaded 900    \n",
-      "Epoch :  16 Test loss recursive :  -1.5712516212463379sage : 6677 MB, loaded 900    \n",
-      "Epoch :  17 Test loss recursive :  -1.573076753616333usage : 6682 MB, loaded 900    \n",
-      "Epoch :  18 Test loss recursive :  -1.5738290190696715sage : 6687 MB, loaded 900    \n",
-      "Epoch :  19 Test loss recursive :  -1.5736327743530274sage : 6692 MB, loaded 900    \n",
-      "Epoch :  20 Test loss recursive :  -1.5736352586746216sage : 6697 MB, loaded 900    \n",
-      "Epoch :  21 Test loss recursive :  -1.5738533711433411sage : 6702 MB, loaded 900    \n",
-      "Epoch :  22 Test loss recursive :  -1.5731782031059265sage : 6706 MB, loaded 900    \n",
-      "Epoch :  23 Test loss recursive :  -1.5737005138397218sage : 6711 MB, loaded 900    \n",
-      "Epoch :  24 Test loss recursive :  -1.5733373427391053sage : 6716 MB, loaded 900    \n",
-      "Epoch :  25 Test loss recursive :  -1.5739181995391847sage : 6721 MB, loaded 900    \n",
-      "Epoch :  26 Test loss recursive :  -1.5741754794120788sage : 6726 MB, loaded 900    \n",
-      "Epoch :  27 Test loss recursive :  -1.573707277774811usage : 6731 MB, loaded 900    \n",
-      "Epoch :  28 Test loss recursive :  -1.5727340388298034sage : 6735 MB, loaded 900    \n",
-      "Epoch :  29 Test loss recursive :  -1.573913972377777usage : 6740 MB, loaded 900    \n",
-      "Epoch :  30 Test loss recursive :  -1.5739597511291503sage : 6745 MB, loaded 900    \n",
-      "Epoch :  31 Test loss recursive :  -1.5741777896881104sage : 6750 MB, loaded 900    \n",
-      "Epoch :  32 Test loss recursive :  -1.5731637907028198sage : 6755 MB, loaded 900    \n",
-      "Epoch :  33 Test loss recursive :  -1.5730502772331239sage : 6760 MB, loaded 900    \n",
-      "Epoch :  34 Test loss recursive :  -1.574044017791748usage : 6765 MB, loaded 900    \n",
-      "Epoch :  35 Test loss recursive :  -1.5729307842254638sage : 6769 MB, loaded 900    \n",
-      "Epoch :  36 Test loss recursive :  -1.573608593940735usage : 6774 MB, loaded 900    \n",
-      "Epoch :  37 Test loss recursive :  -1.5718203806877136sage : 6779 MB, loaded 900    \n",
-      "Epoch :  38 Test loss recursive :  -1.574010829925537usage : 6784 MB, loaded 900    \n",
-      "Epoch :  39 Test loss recursive :  -1.573555245399475usage : 6789 MB, loaded 900    \n",
-      "Epoch :  40 Test loss recursive :  -1.5735099697113037sage : 6794 MB, loaded 900    \n",
-      "Epoch :  41 Test loss recursive :  -1.5740760779380798sage : 6799 MB, loaded 900    \n",
-      "Epoch :  42 Test loss recursive :  -1.574255232810974usage : 6803 MB, loaded 900    \n",
-      "Epoch :  43 Test loss recursive :  -1.5730269312858582sage : 6808 MB, loaded 900    \n",
-      "Epoch :  44 Test loss recursive :  -1.572118844985962usage : 6813 MB, loaded 900    \n",
-      "Epoch :  45 Test loss recursive :  -1.5739227938652038sage : 6818 MB, loaded 900    \n",
-      "Epoch :  46 Test loss recursive :  -1.573589837551117usage : 6823 MB, loaded 900    \n",
-      "Epoch :  47 Test loss recursive :  -1.5741380333900452sage : 6828 MB, loaded 900    \n",
-      "Epoch :  48 Test loss recursive :  -1.5722350144386292sage : 6832 MB, loaded 900    \n",
-      "Epoch :  49 Test loss recursive :  -1.5735520887374879sage : 6837 MB, loaded 900    \n",
-      "Epoch :  50 Test loss recursive :  -1.5709171676635743sage : 6842 MB, loaded 900    \n",
-      "\n",
-      "Finished training\n",
-      "\n",
-      "Arriving data\n",
-      "torch.Size([50, 98, 100, 4])\n",
-      "torch.Size([50, 98, 100, 5])\n",
-      "Processed data\n",
-      "torch.Size([50, 97, 100, 4])\n",
-      "torch.Size([50, 97, 100, 4])\n",
-      "Done\n"
+      "Epoch :  0 Test loss recursive :  -1.5454498219490052usage : 6643 MB, loaded 900    \n",
+      "Current loss : -1.52, ... 18, / 900, Current memory usage : 6654 MB, loaded 900    \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current loss : -1.54, ... 26, / 900, Current memory usage : 6654 MB, loaded 900    \r"
      ]
     }
    ],
